# Evento_BE

./: .env  .gitignore  .gitmessage.txt  README.md  calendar_db  db.sqlite3  event_schedule.csv  lambad_handler.py  manage.py  pyproject.toml  readme.md  requirements.txt  urls.py
.github/ISSUE_TEMPLATE/: github-issue-template.md
.github/workflows/: ci.yml  deploy.yml
Poodding/: asgi.py  settings-DESKTOP-3BI7244.py  settings.py  urls.py  wsgi.py
admin/: models.py
calendaradmin/: apps.py  models.py
calendaradmin/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py
calendars/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
calendars/migrations/: 0001_initial.py  0002_alter_subscription_is_active_alter_calendar_table.py  0002_initial.py  0002_rename_date_event_start_time_and_more.py  0003_event_description.py  0003_remove_calendar_id_calendar_calendar_id.py  0003_subscription.py
comment/: admin.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
comment/migrations/: 0001_initial.py  0002_initial.py
comment_like/: models.py
comment_like/migrations/: 0001_initial.py  0002_initial.py
config/: settings.py  urls.py
event/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
event/migrations/: 0001_initial.py  0002_initial.py  0003_rename_calendar_event_calendar_id_and_more.py
favorite_event/: admin.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
favorite_event/migrations/: 0001_initial.py  0002_initial.py
favorites/: admin.py  models.py  serializers.py  test.py  tests.py  urls.py  views.py
favorites/migrations/: 0001_initial.py  0002_favoriteevent_description.py
function/: models.py  urls.py  views.py
function/migrations/: 0001_initial.py
subscription/: models.py
subscription/migrations/: 0001_initial.py  0002_initial.py
templates/: base.html
templates/registration/: login.html
user/: admin.py  models.py  serializers.py  urls.py  views.py
user/migrations/: 0001_initial.py  0002_user_is_birth_public.py
users/: models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_alarm_user.py  0002_alter_user_options_alter_user_managers_and_more.py
