[tool.poetry]
name = "poodding"
version = "0.1.0"
description = ""
authors = ["jingangkim <seeu4534@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.3"
black = "^24.10.0"
isort = "^5.13.2"
mypy = "^1.13.0"
djangorestframework = "^3.15.2"
django-cors-headers = "^4.6.0"
djangorestframework-simplejwt = "^5.3.1"
django-allauth = {extras = ["crypto"], version = "^65.2.0"}
pillow = "^11.0.0"
psycopg2-binary = "^2.9.10"
python-decouple = "^3.8"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
google-auth = "^2.36.0"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
pydantic = "^2.10.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"
python-multipart = "^0.0.17"
google-auth-oauthlib = "^1.2.1"
requests = "^2.32.3"
google-auth-httplib2 = "^0.2.0"
environ = "^1.0"
cryptography = "^43.0.3"
ngrok = "^1.4.0"
google-api-python-client = "^2.154.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
python_version = 3.12
strict = true

[[tool.mypy.overrides]]
module = "*.migrations.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "manage"
ignore_errors = true

[tool.django-stubs]
django_settings_module = "leaderboard.settings"